--- a/app/assets/stylesheets/lightbox.scss
+++ b/app/assets/stylesheets/lightbox.scss
@@ -35,19 +35,8 @@
   text-align: center;
 }
 
-.lightbox-frame {
-  position: relative;
-  padding-bottom: 56.25%; /* 16:9 */
+.lightbox .frame {
   padding-top: 25px;
-  height: 0;
-}
-
-.lightbox-frame iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
 }
 
 .lightbox-title {
