--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   </title>
   <link rel="shortcut icon" href="<%= asset_path('favicon.ico') %>" type="image/x-icon">
   <link rel="icon" href="<%= asset_path('favicon.ico') %>" type="image/x-icon">
-  <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400,300italic,600,700|Raleway:300,400,500,600,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Open+Sans:400,300italic,600,700|Raleway:300,400,500,600,700' rel='stylesheet' type='text/css'>
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
@@ -18,7 +18,7 @@
 <body>
   <div class="nav"> 
     <div class="brand">
-      <a href="/"><img src="<%= asset_path('doodle_white.png') %>" class="logo" alt="Doodles Academy" /></a>
+      <a href="/"><%= image_tag 'doodle_white.png', class:"logo", alt:"Doodles Academy" %></a>
     </div>
     <ul class="nav-menu">
       <% @pages.each do |page| %>
@@ -33,7 +33,8 @@
       </li>
     </ul>
   </div>
-  <section class="hero">
+  <% max_height = yield(:hero_height).present? ? "#{yield(:hero_height)}px" : "" %>
+  <section class="hero" style="max-height: <%= max_height %>">
     <% @hero_image = yield(:hero_image) %>
     <% unless @hero_image.blank? %>
       <%= image_tag @hero_image, class: "hero__img", alt: "Doodles Academy" %>
@@ -43,7 +44,9 @@
     <% end %>
   </section>
 
-  <%= yield %>
+  <div class="wrapper">
+    <%= yield %>
+  </div>
 
   <div class="footer">
     <div class="newsletter">
