--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2,6 +2,7 @@
 @import "mixins/animation";
 @import "mixins/grid";
 @import "mixins/placeholder";
+@import "mixins/layout";
 @import "mixins/text";
 @import 'global';
 @import 'home';
@@ -10,3 +11,5 @@
 @import 'projects';
 @import 'frame';
 @import 'lightbox';
+@import 'modal';
+@import 'shroud';
