--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,5 +1,6 @@
 <% content_for(:page_title) { ('About') } %>
-<% content_for(:hero_image) { 'top_hero_image' } %>
-<% content_for(:hero_content) { 'This is who we are.' } %>
 
-<h1>About</h1>
+<div class="wrapper">
+<h1 class="title">About</h1>
+<p>Doodles works to eliminate the barriers that too many teachers have in providing a high-quality arts education to their students. By creating an inventory of thoughtful and engaging art lessons, teachers assemble their curriculum-choosing the projects and activities they know are best for their students- and Doodles does the details. </p>
+</div>
