--- a/app/views/home/board.html.erb
+++ b/app/views/home/board.html.erb
@@ -1,5 +1,5 @@
 <% content_for(:page_title) { ('Our Board') } %>
-
+<div class="wrapper">
 <h1>Our Board</h1>
 <section class="boardmember">
   <div class="portrait">
@@ -54,3 +54,4 @@
     <%= image_tag 'portraits/patrick' %>
   </div>
 </section>
+</div>
