--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,7 +11,7 @@
         Our mission is to provide art lessons <br/> which inspire students to meet their creative potential.
       </p>
       <div class="centered" style="height: 80px; margin: 40px 0;">
-        <img src="<%= asset_path('doodle_hand_yellow.png') %>">
+        <%= image_tag 'doodle_hand_yellow.png', class: 'height'%>
       </div>
       <h2>Featured Videos</h2>
       <div class="homepage-gallery">
