--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -2,7 +2,7 @@
 <% content_for(:hero_image) { 'top_hero_image' } %>
 <% content_for(:hero_height) { '350' } %>
 <% content_for(:hero_content) { 'We create the map. You choose the direction.' } %>
-
+<div class="wrapper">
 <h1 class="title">Click on a project to begin</h1>
 <p class="sub title"><a data-modal-id="unit-modal">What are units?</a></p>
 
@@ -38,4 +38,5 @@
       </div>
     </div>
   </div>
+</div>
 </div>
