--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -67,10 +67,16 @@ a {
 p {
   font-size: 1.6em;
   line-height: 1.5em;
+  padding: 0.4em 0;
   font-weight: 300;
 }
 
 img {
+  width: 100%;
+  height: auto;
+}
+
+img.height {
   height: 100%;
   width: auto;
 }
@@ -108,6 +114,7 @@ img {
   background-color: transparent;
   transition: background-color 300ms ease;
 
+  #no-hero + &, 
   &.is-scrolled {
     background-color: rgba($primary-blue, 0.6);
   }
@@ -161,9 +168,19 @@ img {
   padding: 6px 9px;
 }
 
+#no-hero {
+  background-color: transparent;
+  height: 100px;
+}
+
 // Wrapper
 .wrapper {
-  margin: 4em 0 6em;
+  width: $content-max-width;
+  margin: 4em auto;
+
+  h1 {
+    text-align: center;
+  }
 }
 
 // Form
