--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,7 +1,6 @@
 <% content_for(:page_title) { ('Projects') } %>
-<% content_for(:hero_image) { 'top_hero_image' } %>
-<% content_for(:hero_height) { '350' } %>
-<% content_for(:hero_content) { 'We create the map. You choose the direction.' } %>
+<% content_for(:hero) { 'We create the map. You choose the direction.' } %>
+
 <div class="wrapper">
 <h1 class="title">Click on a project to begin</h1>
 <p class="sub title"><a data-modal-id="unit-modal">What are units?</a></p>
