--- a/app/assets/stylesheets/members.scss
+++ b/app/assets/stylesheets/members.scss
@@ -1,3 +1,29 @@
-// Place all the styles related to the members controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.member-grid {
+  @include grid(member-grid-item, 3, 50px);
+}
+
+.member-grid .member-grid-item {
+  margin-top: 50px;
+  position: relative;
+}
+
+.member-avatar {
+  border-radius: 50%;
+  width: 100%;
+  height: 100%;
+}
+
+.member-info {
+  visibility: hidden;
+  opacity: 0;
+  transition: 200ms ease;
+
+  .member-grid-item:hover & {
+    visibility: visible;
+    opacity: 1;
+  }
+}
+
+.member-bio {
+  display: none;
+}
