--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -32,11 +32,11 @@
   </section>
 
   <section class="hero quote">
-    <%= image_tag 'map-direction-image.jpg', class:"hero__img" %>
-    <div class="hero__content">
-      <div class="quote__contents"></div>
+    <%= image_tag 'map-direction-image.jpg', class:"hero-img" %>
+    <div class="hero-content">
+      <div class="quote-contents"></div>
     </div>
-    <div class="quote__selector"></div>
+    <div class="quote-selector"></div>
   </section>
 
   <section>
