--- a/app/views/shared/_member.html.erb
+++ b/app/views/shared/_member.html.erb
@@ -1,7 +1,12 @@
-<%= image_tag(member.avatar_url) %>
-<h2>
-  <%= member.name %>
-</h2>
-<p>
+<%= image_tag "portraits/#{member.first_name.downcase}", class: "member-avatar" %>
+<div class="member-info">
+  <h2 class="member-name">
+    <%= member.name %>
+  </h2>
+  <h3 class="member-position">
+    <%= member.position %>
+  </h3>
+</div>
+<p class="member-bio">
   <%= member.bio %>
 </p>
