--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,6 +10,7 @@
 @import 'partners';
 @import 'buttons';
 @import 'projects';
+@import 'members';
 @import 'frame';
 @import 'lightbox';
 @import 'modal';
