Modal for Units, Academy

--- a/app/views/home/partners.html.erb
+++ b/app/views/home/partners.html.erb
@@ -2,7 +2,7 @@
 <div class="wrapper">
 <h1>Partners</h1>
 
-<%= image_tag 'partners/pdx-child-art-studio', class:'partners-image'%>
+<%= image_tag 'partners/pdx-child-art-studio.jpg', class:'partners-image' %>
 <h2> Portland Child Art Studio</h2>
 <p>The Portland Child Art Studio is dedicated to supporting the perceptual development of children through artistic learning.<p>
 
