--- a/app/views/shared/_modal.html.erb
+++ b/app/views/shared/_modal.html.erb
@@ -1,8 +1,8 @@
 <div class="modal" id='<%= id %>'>
-  <div class="modal-bg"></div>
   <div class="modal-content">
+    <div class="modal-close"></div>
     <div class="modal-title">
-      <h3><%= title %></h3>
+      <h2><%= title %></h2>
     </div>
     <div class="modal-body">
       <p><%= body %></p>
